2020-06-09  Karl Berry  <karl@freefriends.org>

	* capconv.pl (transform_subtitles): take title and author arguments
	in order to avoid one item per line for beet columns.
	(capsule_convert): change call.
	* capdata-xlate.pl (xlate_dump_count): more clues when reporting
	an unused translation.
	* capin.pl: doc fix.
	* lists-unifications.txt,
	* lists-translations.txt (\NMHamiltonKelly): use hex code points to
	preserve {} in output. Use \CONNECT in other entry to match new
	transform_subtitles convention.
	* tb123capsule.txt: the ,\\ before Vytas is now one special case
	too many; omit the \\.
	* tb32capsule.txt: use "{} " instead of "\ " to simplify.
	* tb72capsule.txt: ctan https, pst-pdf replaced ps4pdf.

2020-06-01  Karl Berry  <karl@freefriends.org>

	* Makefile (outone): define differently on different machines.

	* tb72capsule.txt,
	* tb77capsule.txt,
	* tb84capsule.txt,
	* tb87capsule.txt,
	* tb88capsule.txt,
	* tb92capsule.txt,
	* tb94capsule.txt,
	* tb95capsule.txt,
	* tb97capsule.txt,
	* tb99capsule.txt,
	* tb100capsule.txt,
	* tb101capsule.txt,
	* tb102capsule.txt,
	* tb103capsule.txt,
	* tb104capsule.txt,
	* tb105capsule.txt,
	* tb106capsule.txt,
	* tb107capsule.txt,
	* tb108capsule.txt,
	* tb109capsule.txt,
	* tb113capsule.txt,
	* tb116capsule.txt,
	* tb119capsule.txt: glisterings subtitles.

2020-04-26  Karl Berry  <karl@tug.org>

	* lists-unifications.txt (Alban Grimm): no "Prof." in name list.
	* tb127capsule.txt: new issue.
	* tb126capsule.txt: now public.

2020-03-12  Karl Berry  <karl@freefriends.org>

	* lists-unifications.txt (Humanities): unify with Philology.

2019-11-27  Karl Berry  <karl@freefriends.org>

	* capaccum-author.pl,
	* capaccum-keyword.pl,
	* capaccum-title.pl: expand the template string accordingly.
	* capaccum.pl (accumulation): use template for <h2> string
	instead of hardwired "Author/People". Report from Udo Wermuth.

	* tb124.capsule.txt (Atkinson): note comic is on second page of pdf.
