@@ -1,3 +1,11 @@
+2020-06-11  Karl Berry  <karl@freefriends.org>
+
+	* capconv.html (transform_subtitles): wrap beet entries containing
+	"-" or "dash" or "Dash" in <nobr>.
+	* capaccum-title.pl (output_title_list): let's use every 100 titles.
+	(print_all_by_title): wrap  entire <ul>..</ul> in <small>
+	instead of each individual <li>, for better line spacing.	
+
 2020-06-09  Karl Berry  <karl@freefriends.org>
 
 	* capconv.pl (transform_subtitles): take title and author arguments
